[gd_scene load_steps=2 format=3 uid="uid://c20036aje38jy"]

[ext_resource type="Script" path="res://main_scene.gd" id="1_eib1u"]

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eib1u")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00277778
anchor_top = 0.0890625
anchor_right = 1.00278
anchor_bottom = 0.126563
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.390625, 1, 0.842896, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 32
text = "Battery Stats
Demo"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="Button" type="Button" parent="Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Check Battery Status"

[node name="Status" type="Label" parent="Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0.882813, 0.882813, 0.882813, 1)
theme_override_font_sizes/font_size = 24
text = "Charging (80%)"
horizontal_alignment = 1

[connection signal="pressed" from="Container/Button" to="." method="_on_button_pressed"]
