[gd_scene load_steps=7 format=3 uid="uid://dahuk438fanqv"]

[ext_resource type="Script" path="res://main_scene.gd" id="1_xwei6"]
[ext_resource type="Texture2D" uid="uid://k7haokkfr5xf" path="res://images/italy-4961709_1280.jpg" id="2_kh4pv"]
[ext_resource type="PackedScene" uid="uid://bgdel7q704wr2" path="res://thumbnail_button.tscn" id="2_ogq1v"]

[sub_resource type="ButtonGroup" id="ButtonGroup_sffnh"]
allow_unpress = true

[sub_resource type="ButtonGroup" id="ButtonGroup_ebim3"]
allow_unpress = true

[sub_resource type="ButtonGroup" id="ButtonGroup_gx616"]
allow_unpress = true

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xwei6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15625, 0.15625, 0.15625, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.02
anchor_right = 1.0
anchor_bottom = 0.02
grow_horizontal = 2
theme_override_colors/font_color = Color(0.988281, 0.547162, 0.193024, 1)
theme_override_font_sizes/font_size = 32
text = "Wallpaper Demo"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.2
grow_horizontal = 2
theme_override_constants/separation = 32
alignment = 1

[node name="ThumbnailButton" parent="Buttons" instance=ExtResource("2_ogq1v")]
layout_mode = 2
button_group = SubResource("ButtonGroup_sffnh")
image_path = "res://images/errant-rocks-1561265_1280.jpg"

[node name="ThumbnailButton2" parent="Buttons" instance=ExtResource("2_ogq1v")]
layout_mode = 2
button_group = SubResource("ButtonGroup_ebim3")
image_path = "res://images/italy-4961709_1280.jpg"

[node name="ThumbnailButton3" parent="Buttons" instance=ExtResource("2_ogq1v")]
layout_mode = 2
button_group = SubResource("ButtonGroup_gx616")
image_path = "res://images/mountain-8190836_1280.jpg"

[node name="PreviewImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_kh4pv")
expand_mode = 3
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="SetWallpaper" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.89
anchor_right = 0.9
anchor_bottom = 0.94
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "SET WALLPAPER"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="SetWallpaper" to="." method="_on_set_wallpaper_pressed"]
